<resources>

    <string name="app_name">AndroidPizza</string>

    <string name="welcome">Welcome to RU Pizza!</string>
    <string name="specialty">Specialty Pizza</string>
    <string name="byo">Build Your Own Pizza</string>
    <string name="history">View Order History</string>
    <string name="currorder">View Current Order</string>

    <string name="pizza_size">Select Pizza Size! (must select type first) </string>
    <string name="ex_sauce">Extra Sauce</string>
    <string name="ex_cheese">Extra Cheese</string>
    <string name="pizza_button">Create Pizza</string>
    <string name="price">Price: </string>
    <string name="extra">Extra Attributes </string>
    <string name="toppings"> Toppings</string>

    <string name="ordernum">Order Number:</string>
    <string name="tprice">Total Price:</string>
    <string name="tax">Tax:</string>
    <string name="oprice">Order Price:</string>
    <string name="dpizza">Delete Pizza</string>
    <string name="place">Place Order </string>



    <string name="delete">Delete Order</string>
    <string name="orderList">Order Selector</string>
    <string name="build_your_own_pizza">Build Your Own Pizza!</string>
    <string name="sauce">Sauce</string>
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="ham">Ham</string>
    <string name="shrimp">Shrimp</string>
    <string name="squid">Squid</string>
    <string name="crab_meat">Crab Meat</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="onion">Onion</string>
    <string name="mushroom">Mushroom</string>
    <string name="black_olive">Black Olive</string>
    <string name="pineapple">Pineapple</string>
    <string name="jalapeno">Jalapeno</string>
    <string name="beef">Beef</string>
    <string name="tomato">Tomato</string>
    <string name="alfredo">Alfredo</string>
    <string name="build_size_text">Size</string>
    <string name="create_pizza">Create Pizza</string>
    <string name="image_of_ingredients_for_build_your_own_pizza">Image of ingredients for build your own pizza</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="pizza_description">Pizza Description</string>

    <string-array name="spinner_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>