<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloWorldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/helloWorldText"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/specialtyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/specialty"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/buildButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/byo"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="468dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayoutTop"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/viewOrderHistoryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/viewCurrentOrderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currorder"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="453dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>